--- a/Codigo/src/interfaz/VentanaMenuPrincipalUsuario.form
+++ b/Codigo/src/interfaz/VentanaMenuPrincipalUsuario.form
@@ -2103,6 +2103,7 @@
                           </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="lblDatosDeInteres" min="-2" pref="600" max="-2" attributes="0"/>
                                   <Component id="lblProfesionalTitulo" min="-2" pref="516" max="-2" attributes="0"/>
                                   <Component id="lblCualFue" min="-2" pref="600" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
@@ -2126,18 +2127,20 @@
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="126" max="-2" attributes="0"/>
-                      <Component id="lblCualFue" min="-2" pref="46" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
+                      <Component id="lblDatosDeInteres" min="-2" pref="46" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                      <Component id="lblCualFue" min="-2" pref="46" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="lblMasConsumido" alignment="3" min="-2" pref="116" max="-2" attributes="0"/>
-                          <Component id="lblMasConsumidoInfo" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                          <Component id="lblMasConsumido" alignment="3" min="-2" pref="185" max="-2" attributes="0"/>
+                          <Component id="lblMasConsumidoInfo" alignment="3" min="-2" pref="185" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="105" max="-2" attributes="0"/>
                       <Component id="lblProfesionalTitulo" min="-2" pref="48" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="lblProfesionalMasContactado" min="-2" pref="155" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="84" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -2164,27 +2167,68 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblCualFue">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Century Gothic" size="24" style="1"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="f9" green="d3" red="a4" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="&#xbf;Cu&#xe1;l fue el alimento que m&#xe1;s cunsumi&#xf3;?"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lblMasConsumido">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Century Gothic" size="18" style="0"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="jLabel4"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lblMasConsumidoInfo">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Century Gothic" size="18" style="0"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="jLabel5"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lblProfesionalTitulo">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Century Gothic" size="24" style="1"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="f9" green="d3" red="a4" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="&#xbf;Qui&#xe9;n es el profesional m&#xe1;s contactado?"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lblProfesionalMasContactado">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Century Gothic" size="18" style="0"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="jLabel7"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="lblDatosDeInteres">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Century Gothic" size="24" style="1"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="f9" green="d3" red="a4" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Datos de inter&#xe9;s"/>
               </Properties>
             </Component>
           </SubComponents>
