--- a/Codigo/src/interfaz/VentanaRegistrarProfesional.form
+++ b/Codigo/src/interfaz/VentanaRegistrarProfesional.form
@@ -318,7 +318,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="630" y="650" width="115" height="94"/>
+              <AbsoluteConstraints x="640" y="650" width="115" height="94"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -499,7 +499,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="490" y="660" width="-1" height="44"/>
+              <AbsoluteConstraints x="480" y="660" width="-1" height="44"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -527,11 +527,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato vac&#xed;o"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="460" y="180" width="134" height="38"/>
+              <AbsoluteConstraints x="460" y="180" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -543,11 +543,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato invalido"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="230" y="550" width="134" height="38"/>
+              <AbsoluteConstraints x="230" y="550" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -559,11 +559,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato vac&#xed;o"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="530" y="660" width="120" height="38"/>
+              <AbsoluteConstraints x="520" y="660" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -575,11 +575,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato vac&#xed;o"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="460" y="220" width="134" height="38"/>
+              <AbsoluteConstraints x="460" y="220" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -620,11 +620,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato vac&#xed;o"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="590" y="300" width="110" height="38"/>
+              <AbsoluteConstraints x="590" y="300" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -636,11 +636,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato vac&#xed;o"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="530" y="410" width="134" height="38"/>
+              <AbsoluteConstraints x="530" y="410" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
