--- a/Codigo/src/interfaz/VentanaRegistrarUsuario.form
+++ b/Codigo/src/interfaz/VentanaRegistrarUsuario.form
@@ -628,11 +628,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato vac&#xed;o"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="500" y="180" width="134" height="38"/>
+              <AbsoluteConstraints x="500" y="180" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -644,11 +644,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato vac&#xed;o"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="500" y="230" width="134" height="38"/>
+              <AbsoluteConstraints x="500" y="230" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -660,11 +660,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato invalido"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="560" y="350" width="130" height="38"/>
+              <AbsoluteConstraints x="560" y="350" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -683,11 +683,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="80" green="80" red="f0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Dato vac&#xed;o"/>
+            <Property name="text" type="java.lang.String" value="Dato incorrecto"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="580" y="280" width="120" height="38"/>
+              <AbsoluteConstraints x="580" y="280" width="150" height="38"/>
             </Constraint>
           </Constraints>
         </Component>
